--- a/src/components/websites/Registration.scss
+++ b/src/components/websites/Registration.scss
@@ -2,6 +2,7 @@
     padding: 30px 20px;
     background-color: white;
     position: relative;
+    color: black;
     .labelok {
         color: black;
     }
