--- a/src/components/websites/Registration.scss
+++ b/src/components/websites/Registration.scss
@@ -3,7 +3,11 @@
     background-color: white;
     position: relative;
     color: black;
-    .labelok {
+    .text {
         color: black;
     }
+    
+}
+label {
+    color: red;
 }
