--- a/src/components/websites/Registration.scss
+++ b/src/components/websites/Registration.scss
@@ -1,13 +1,17 @@
 #RegisterForm {
+    border: solid 2px;
+    margin: 20px 400px;
     padding: 30px 20px;
     background-color: white;
     position: relative;
     color: black;
-    .text {
+    width: 1000px;
+    text-align: center;
+    .formlabel {
         color: black;
     }
-    
-}
-label {
-    color: red;
+    label {
+        color: red;
+    }
+   
 }
