--- a/src/components/websites/Leaderboard.scss
+++ b/src/components/websites/Leaderboard.scss
@@ -1,7 +1,16 @@
-thead {
-    background-color: white;
-    td {
-       background-color: white;
-       font-weight: bold;
+
+.Leaderboard {
+    margin-top: 20px;
+    tbody {
+        color: white;
+      
+    }
+    thead {
+        background-color: white;
+        td {
+           background-color: white;
+           font-weight: bold;
+           
+        }
     }
 }
